<resources>
    <string name="app_name">food-manager</string>
    <string name="styled_app_name">Food Manager</string>
    <string name="save_msg">Salvar</string>
    <string name="cancel_msg">Cancelar</string>
    <string name="register_recipe_title">Cadastro de receita</string>
    <string name="required">* Obrigatório</string>
    <string name="text">Text</string>
    <string name="recipe_title">Título da receita</string>
    <string name="description">Descrição</string>
    <string name="yield">Rendimento</string>
    <string name="category">Categoria</string>
    <string name="ingredients">Ingredientes</string>
    <string name="user_mock">User</string>
    <string name="menu_bar">Barra de menu</string>
    <string name="recipes">Receitas</string>
    <string name="money_management">Despesas e receitas</string>
    <string name="finances">Finanças</string>
    <string name="graphs">Relatórios</string>
    <string name="name">Nome</string>
    <string name="add_ingredient">Adicionar Ingrediente</string>
    <string name="ingredient_register_title">Cadastro de ingrediente</string>
    <string name="quantity">Quantidade</string>
    <string name="unit_measurement">Unidade de medida</string>
    <string name="price">Preço</string>
    <string name="pick_ingredients">Escolha os ingredientes</string>
    <string name="register_expense_title">Cadastro de despesa</string>
    <string name="expense_value">Valor da despesa</string>
    <string name="expenses">Despesas</string>
    <string name="income">Entradas</string>
    <string name="costs">Custos</string>
    <string name="pick_image">Selecione uma imagem</string>
    <string name="edit_recipe">Editar Receita</string>
    <string name="edit_ingredient">Editar Ingrediente</string>
    <string name="edit_income">Editar Entrada</string>
    <string name="edit_expense">Editar Despesa</string>
    <string name="register_income">Cadastro de entrada</string>
    <string name="amount">Valor</string>
    <string name="image_was_selected">"Imagem selecionada"</string>
    <string name="delete_confirmation">Você deseja mesmo deletar este registro?</string>
    <string name="confirm">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="successful_operation">Operação concluída com sucesso</string>
    <string name="data_not_processed">Algum dado não pôde ser processado</string>
    <string name="incomes_vs_expenses">Entradas vs. Despesas</string>
</resources>