<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.food_technical_sheet.RegisterForm"
>
    <LinearLayout
        android:id="@+id/register_food_tech_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#444444"
        android:padding="25dp"
        android:orientation="vertical"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#6dffbf"
            android:padding="30dp"
            android:text="@string/register_food_technical_sheet_title"
        />
        <EditText
            android:id="@+id/register_food_tech_sheet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#6bfff7"
            android:textColorHint="#80CBC4"
            android:inputType="text"
        />
        <EditText
            android:id="@+id/register_food_tech_sheet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#6bfff7"
            android:textColorHint="#80CBC4"
        />
        <EditText
            android:id="@+id/register_food_tech_sheet_yield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yield"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#6bfff7"
            android:textColorHint="#80CBC4"
        />

        <Spinner
            android:id="@+id/register_food_tech_sheet_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/category"
            android:minHeight="48dp"
            android:prompt="@string/category"
        />
        <Spinner
            android:id="@+id/register_food_tech_sheet_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ingredients"
            android:minHeight="48dp"
            android:prompt="@string/ingredients"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal"
        >
            <Button
                android:id="@+id/cancel_button"
                android:text="@string/cancel_msg"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_msg"
                android:textAllCaps="false"
            />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>