<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.recipe.RecipeRegisterForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_ingredient_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_ingredient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/ingredient_register_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ingredient_name_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/trendingStart"
        app:hintTextColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_layout_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_ingredient_name_edit"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ingredient_description_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/accent"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_name_field"
        app:placeholderTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_ingredient_description_edit"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ingredient_quantity_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/quantity"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/trendingStart"
        app:hintTextColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_description_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_ingredient_quantity_edit"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ingredient_unit_measurement_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:endIconTint="@color/black"
        android:hint="@string/unit_measurement"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/trendingStart"
        app:hintTextColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_quantity_field">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/unit_measurement"
            android:id="@+id/register_ingredient_unit_measurement_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ingredient_price_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/price"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/trendingStart"
        app:hintTextColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_unit_measurement_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_ingredient_price_edit"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/register_ingredient_price_field"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/cancel_ingredient_register_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_msg"
            android:textColor="@color/trendingStart"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/save_ingredient_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/trendingStart"
            app:strokeWidth="2dp"
            />

        <Button
            android:id="@+id/save_ingredient_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/trendingStart"
            android:text="@string/save_msg"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_ingredient_register_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>